# SimplexNoiseCImg

./: .gitignore  CImg.h  CMakeLists.txt  README.md  build.bat  build.sh  color.cpp  color.h  img.cpp  img.h  main.cpp
